# kfa

./: CLAUDE.md  README.md  roadmap.md
app/: eslint.config.js  index.html  jest.config.js  package-lock.json  package.json
app-backend/: CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  debug_unicode.cpp  kfa-tts-server  test_ipa_direct.cpp  test_kfa_conversion.cpp
app-backend/include/: kfa_converter.h  neural_synthesizer.h  speech_synthesizer.h  tts_server.h
app-backend/src/: kfa_converter.cpp  main.cpp  neural_synthesizer.cpp  speech_synthesizer.cpp  tts_server.cpp
app/src/: App.tsx  main.tsx
app/src/types/: ESpeechStatus.ts  IAppState.ts  IKfaPhoneme.ts  IKfaWord.ts  ISpeechSettings.ts  ISpeechState.ts  TThemeMode.ts
app/src/utils/: KfaToIpaConverter.ts  MeSpeakSynthesizer.ts  speechSynthesis.ts
app/src/utils/__tests__/: KfaToIpaConverter.test.ts  MeSpeakSynthesizer.test.ts
kfa-translator/: README.md  index.html  package-lock.json  package.json
kfa-translator/public/: robots.txt  sitemap.xml
kfa-translator/public/data/: ipadict.txt
kfa-translator/scripts/: convertDictionary.cjs
kfa-translator/src/: App.tsx
kfa-translator/src/components/: EnhancedTranslationDisplay.tsx  TranslationWord.tsx
kfa-translator/src/services/: translationService.ts
kfa-translator/src/types/: index.ts
kfa-translator/src/utils/: dictionaryLoader.ts  ipaToKfa.ts  tokenizer.ts
